--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "tpaycom/magento2cards",
   "description": "tpay.com card payments module",
   "type": "magento2-module",
+  "version": "1.1.0",
   "license": [
     "OSL-3.0"
   ],
