--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,13 @@
   "name": "tpaycom/magento2cards",
   "description": "tpay.com card payments module",
   "type": "magento2-module",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "license": [
     "OSL-3.0"
   ],
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0"
+    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0",
+    "magento/product-community-edition": "2.3.*"
   },
   "autoload": {
     "files": [
