--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,15 @@
 {
   "name": "tpaycom/magento2cards",
-  "description": "tpay.com card payments module",
+  "description": "Tpay card payments module",
   "type": "magento2-module",
-  "version": "1.3.4",
+  "version": "1.4.0",
   "license": [
     "OSL-3.0"
   ],
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0",
-    "magento/product-community-edition": "2.3.*"
+    "php": "~7.0.0|~7.1.0|~7.2.0|~7.3.0",
+    "magento/product-community-edition": "^2.3.*",
+    "tpay-com/tpay-php": "^2.2.*"
   },
   "autoload": {
     "files": [
