--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
     "OSL-3.0"
   ],
   "require": {
-    "php": "~7.0.0|~7.1.0|~7.2.0|~7.3.0|~7.4.0",
-    "magento/product-community-edition": "^2.3",
-    "tpay-com/tpay-php": "^2.2"
+    "php": ">=7",
+    "magento/product-community-edition": "~2.3|~2.4",
+    "tpay-com/tpay-php": "^2.3"
   },
   "autoload": {
     "files": [
