--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,7 @@
   "name": "tpaycom/magento2cards",
   "description": "Tpay card payments module",
   "type": "magento2-module",
-  "version": "1.4.4",
-  "license": [
-    "OSL-3.0"
-  ],
+  "license": "MIT",
   "require": {
     "php": ">=7",
     "magento/product-community-edition": "~2.3|~2.4",
